# bcf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
bcfcore/: CMakeLists.txt  bytebuffer.cpp  channelmanager.cpp  ichannel.cpp  protocolbuildermanager.cpp  protocolparsermanager.cpp  protocolparsermanager.h  requesthandler.cpp  serialchannel.cpp  serialchannel_qt.cpp  tcpclientchannel_qt.cpp
bcfcore/private/: channelmanager.h  filetransmithelper.h  protocolbuildermanager.h  protocolparsermanager.h
bcfcore/ymodel/: ymodem.cpp  ymodem.h  ymodemreceiver.cpp  ymodemreceiver.h  ymodemtransmit.cpp  ymodemtransmit.h
demo/: CMakeLists.txt  aprotocolbuilder.cpp  aprotocolbuilder.h  main.cpp
docs/: main.zh-cn.md
examples/: CMakeLists.txt  main.cpp
examples/customprotocol/: CMakeLists.txt  README.md  customprotocol.h  customprotocol_recv.cpp  customprotocol_send.cpp
examples/rawdata/: CMakeLists.txt  README.md  rawdata.cpp
examples/simple/: CMakeLists.txt  README.md  simple.cpp
examples/simpleserialport/: CMakeLists.txt  README.md  simpleserialport.cpp
examples/simpletcp/: CMakeLists.txt  README.md  simpletcpclient.cpp  simpletcpserver.cpp
examples/ymodel/: CMakeLists.txt  README.md  ymodel.cpp  ymodel_recv.cpp  ymodel_send.cpp
include/: abstractprotocolmodel.h  bcf.h  bcfexport.h  channelmanager.h  config.h  endian.hpp  exception.hpp  filter.h  globaldefine.h  ichannel.h  iprotocolbuilder.h  iprotocolparser.h  netlibtypes.h  platform.hpp  protocolbuildermanager.h  protocolparsermanager.h  requesthandler.h  serialchannel.h  serialchannel_qt.h  tcpclientchannel_qt.h
include/base/: bytebuffer.hpp  endian.hpp  exception.hpp  globaldefine.h  netlibtypes.h  noncopyable.hpp  platform.hpp  timer.h
include/protocolparser/: byheadprotocol.h  byheadprotocolparser.h  fixedlengthprotocol.h
